# NetworkCommunication

./: .gitignore  CMakeLists.txt
Client/src/: CMakeLists.txt  connection.cpp  connection.hpp  main.cpp
Server/src/: CMakeLists.txt  main.cpp
